[package]
name = "axum-auth-provider"
version = "0.3.0"
edition = "2024"

[lib]
path = "src/auth.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
jsonwebtoken = { version = "9" }
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.4" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
